ensure main CTAs to be visible on small landscape screens

--- a/app/styles/component_variables.scss
+++ b/app/styles/component_variables.scss
@@ -8,6 +8,8 @@ $purple-2:      #9487FF;
 $middle-purple: #d5d5fc;
 $light-purple:  #e9e8fd;
 
+$small-screen-height: 768px;
+
 %font-64-80 {
   font-size: 64px;
   line-height: 80px;
